# MultiRoblox-RAM

./: LICENSE  README.md
MultiRoblox/: CHANGELOG.md  build.bat  package-lock.json  package.json
MultiRoblox/.claude/: launch.json
MultiRoblox/src/: index.html  main.js  mutex.ps1  preload.js  renderer.js  styles.css  tauri-bridge.js
MultiRoblox/src-tauri/: Cargo.toml  tauri.conf.json
MultiRoblox/src-tauri/.cargo/: config.toml
MultiRoblox/src-tauri/capabilities/: default.json
MultiRoblox/src-tauri/resources/: RobloxNative.cs
MultiRoblox/src-tauri/src/: commands.rs  crypto.rs  encryption.rs  lib.rs  login.rs  main.rs  native.rs  paths.rs  roblox_api.rs  settings.rs  state.rs  storage.rs  tracking.rs  update.rs
multiroblox/: README.md  build.bat  package-lock.json  package.json
multiroblox/src/: cookie.ps1  genaccounts.json  index.html  main.js  mutex.ps1  preload.js
